--- a/src/index.scss
+++ b/src/index.scss
@@ -18,11 +18,16 @@ ul {
     margin-left: 15px;
 }
 
+
+
 .blank {
-    width: 20px;
     border-bottom: solid 2px black;
-    margin: 10px;
-}
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    line-height: 20px;
+    margin: 2px;
+  }
 
 .wordbox {
     display: flex;
