fix styles and input

--- a/src/index.scss
+++ b/src/index.scss
@@ -17,17 +17,8 @@ body {
 li {
     list-style-type: none;
 
-
-
 }
 
-ul {
-    // margin-left: 15px;
-}
-
-// button {
-
-// }
 header {
     width: 100%;
     background: rgb(46, 42, 20);
@@ -52,11 +43,6 @@ span {
     font-size: 30px;
 }
 
-.wordbox {
-    display: flex;
-    margin: 15px;
-}
-
 //GLOBAL CLASSES 
 .row,
 .column {
@@ -78,10 +64,6 @@ span {
 .align-center {
     align-items: center;
 }
-
-// .flex-1 {
-//     flex: 1;
-// }
 
 .text-center {
     text-align: center;
@@ -120,7 +102,7 @@ span {
     display: inline-flex;
     justify-content: center; 
     align-items: center; 
-    padding: -0.5em 1em; 
+    padding: 0.5em 1em; 
     font-size: 17px;
     background-color: #e3e0cf; 
     border-radius: 5px;
@@ -131,6 +113,8 @@ span {
     min-width: 3em; 
     min-height: 1.5em; 
     margin: 5px;
+    max-width: 500px;
+    text-align: left;
 }
 
 .start {
@@ -161,4 +145,47 @@ span {
     border-radius: 5px;
     width: 72px;
     text-align: center;
+}
+
+.startLetter {
+    font-size: 30px;
+    margin: 10px; 
+    background-color: rgb(46, 42, 20);
+    color: rgb(225, 224, 205);
+    padding: 7px;
+    border-radius: 5px;
+    width: 72px;
+    text-align: center;
+    
+}
+
+.wordbox {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    white-space: nowrap;
+    overflow: hidden;
+    padding: 0 10px;
+    width: 100%;
+    max-width: 500px;
+    box-sizing: border-box;
+    margin: 20px;
+}
+
+.blank {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.blank li {
+    list-style-type: none;
+    font-size: calc(16px + 1vw);
+    line-height: 1.2;
+    overflow: hidden;
+    text-align: center;
+    max-width: 100%;
+    white-space: nowrap;
+    box-sizing: border-box;
 }
