--- a/src/index.scss
+++ b/src/index.scss
@@ -23,7 +23,7 @@ header {
     width: 100%;
     background: rgb(46, 42, 20);
     padding: 10px;
-   
+
 
     span {
         color: rgb(225, 224, 205)
@@ -33,6 +33,7 @@ header {
 span {
     margin: 3px;
 }
+
 .blank {
     border-bottom: solid 3px black;
     width: 30px;
@@ -100,45 +101,31 @@ span {
 .hint {
     border-color: rgb(46, 42, 20);
     display: inline-flex;
-    justify-content: center; 
-    align-items: center; 
-    padding: 0.5em 1em; 
+    justify-content: center;
+    align-items: center;
+    padding: 0.5em 1em;
     font-size: 17px;
-    background-color: #e3e0cf; 
+    background-color: #e3e0cf;
     border-radius: 5px;
     cursor: pointer;
     user-select: none;
-    line-height: 1; 
-    text-align: center; 
-    min-width: 3em; 
-    min-height: 1.5em; 
+    line-height: 1;
+    text-align: center;
+    min-width: 3em;
+    min-height: 1.5em;
     margin: 5px;
     max-width: 500px;
     text-align: left;
 }
 
-.start {
-    border-color: rgb(46, 42, 20);
-    display: inline-flex;
-    justify-content: center; 
-    align-items: center; 
-    padding: 0.5em 1em; 
-    font-size: 23px;
-    background-color: #e3e0cf; 
-    border-radius: 5px;
-    cursor: pointer;
-    user-select: none;
-    line-height: 1; 
-    text-align: center; 
-    min-width: 3em; 
-    min-height: 1.5em; 
-    margin: 5px;
+.startBox {
+    margin: 12px;
 }
 
 .timer {
     font-family: 'Orbitron', sans-serif;
     font-size: 30px;
-    margin: 10px; 
+    margin: 10px;
     background-color: rgb(46, 42, 20);
     color: rgb(225, 224, 205);
     padding: 10px;
@@ -149,14 +136,14 @@ span {
 
 .startLetter {
     font-size: 30px;
-    margin: 10px; 
+    margin: 10px;
     background-color: rgb(46, 42, 20);
     color: rgb(225, 224, 205);
     padding: 7px;
     border-radius: 5px;
     width: 72px;
     text-align: center;
-    
+
 }
 
 .wordbox {
@@ -191,11 +178,91 @@ span {
 }
 
 .wordAnswers {
-    text-align: left; 
-    padding-left: 0;  
-    list-style-position: inside; 
+    text-align: left;
+    padding-left: 0;
+    list-style-position: inside;
 }
 
 .wordAnswers .hint {
     padding: 5px 0;
+}
+
+.spKeyBox {
+    border-color: rgb(46, 42, 20);
+    display: inline-flex;
+    justify-content: space-between;
+    margin: 5px;
+    width: 375px;
+}
+
+.spKeys {
+    border-color: rgb(46, 42, 20);
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0.5em 1em;
+    font-size: 23px;
+    background-color: #e3e0cf;
+    border-radius: 5px;
+    cursor: pointer;
+    user-select: none;
+    line-height: 1;
+    text-align: center;
+    min-width: 3em;
+    min-height: 1.5em;
+    margin: 5px;
+}
+
+
+/* Hide default checkbox */
+.custom-checkbox input {
+    opacity: 0;
+    position: absolute;
+    cursor: pointer;
+}
+
+/* custom checkbox */
+.custom-checkbox {
+    position: relative;
+    padding-left: 35px;
+    cursor: pointer;
+    font-size: 18px;
+    margin: 5px;
+}
+
+/* custom checkbox itself */
+.custom-checkbox .checkmark {
+    position: absolute;
+    top: -2px;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    background-color: rgb(225, 224, 205);
+    border: 2px solid rgb(46, 42, 20);
+    border-radius: 4px;
+}
+
+/* appearance of the checkbox when checked */
+.custom-checkbox input:checked+.checkmark {
+    background-color: rgb(46, 42, 20);
+    border-color: rgb(225, 224, 205);
+}
+
+/* add a checkmark when the checkbox is checked */
+.custom-checkbox .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+/* style the checkmark */
+.custom-checkbox input:checked+.checkmark:after {
+    display: block;
+    left: 7px;
+    top: 3px;
+    width: 5px;
+    height: 10px;
+    border: solid rgb(225, 224, 205);
+    border-width: 0 3px 3px 0;
+    transform: rotate(45deg);
 }
