--- a/src/index.scss
+++ b/src/index.scss
@@ -7,7 +7,11 @@
     font-family: sans-serif;
 }
 
-
+#root {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
 
 html,
 body {
@@ -32,6 +36,16 @@ header {
 
 span {
     margin: 3px;
+}
+
+footer {
+    background-color: rgba(225, 224, 205, 0.743);
+    color: rgb(166, 165, 162);
+    text-align: center;
+    padding: 10px;
+    width: 100%;
+    margin-top: auto;
+    font-size: 14px;
 }
 
 .blank {
@@ -79,6 +93,7 @@ span {
 //CUSTOME STYLES
 
 .wordDisplay {
+
     padding: 10px;
 }
 
@@ -184,7 +199,18 @@ span {
 }
 
 .wordAnswers .hint {
-    padding: 5px 0;
+    padding: 5px;
+}
+
+.wordAnswers li {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    p {
+        margin-left: 5px;
+
+    }
 }
 
 .spKeyBox {
@@ -265,4 +291,10 @@ span {
     border: solid rgb(225, 224, 205);
     border-width: 0 3px 3px 0;
     transform: rotate(45deg);
+}
+
+@media (min-width: 1024px) {
+    .wordDisplay {
+        max-width: 50%;
+    }
 }
